--- a/running.html
+++ b/running.html
@@ -49,7 +49,7 @@
     <section class="running-box running-paris">
         <div class="running-layout">
             <div class="running-image">
-                <img src="image/L-L.jpg" alt="Personnes qui courent à Paris">
+                <img src="image/napoleon.jpg" alt="Personnes qui courent à Paris">
             </div>
 
             <div class="running-text">
