--- a/equipements.html
+++ b/equipements.html
@@ -38,10 +38,9 @@
 
     <!-- HERO -->
     <section class="hero">
-        <h1>S'équiper</h1>
+        <h1>S’équiper pour faire du sport en plein air</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
-            Suspendisse lectus tortor, dignissim sit amet.
+            Vous n’aurez plus d’excuses pour louper votre séance ! Qu’il fasse chaud, qu’il pleuve ou qu’il neige, nous avons rassemblé pour vous les meilleurs conseils afin de continuer à pratiquer le tennis, le running et le basket en toutes circonstances. Découvrez également notre sélection d’équipements incontournables pour vous équiper efficacement et vous protéger, aussi bien en été qu’en hiver.
         </p>
     </section>
 
