--- a/running.html
+++ b/running.html
@@ -191,7 +191,7 @@
 
                     <!-- SLIDE 1 -->
                     <div class="item active">
-                        <img src="image/bardella.jpg" alt="Coureurs débutants">
+                        <img src="image/bardella.jpeg" alt="Coureurs débutants">
                         <div class="running-carousel-caption">
                             <a href="https://www.paris.fr" target="_blank" class="btn-running">
                                 Courir 5 km
