--- a/equipements.html
+++ b/equipements.html
@@ -46,32 +46,12 @@
 
     <!-- CONTENU -->
     <section class="equipements">
-        <h2>Équipements</h2>
-
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
-            Suspendisse lectus tortor, dignissim sit amet.
-        </p>
-
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
-            Suspendisse lectus tortor, dignissim sit amet.
-        </p>
-
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
-            Suspendisse lectus tortor, dignissim sit amet.
-        </p>
-
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
-            Suspendisse lectus tortor, dignissim sit amet.
-        </p>
-
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
-            Suspendisse lectus tortor, dignissim sit amet.
-        </p>
+        
+        <!-- QUOTE -->
+        <blockquote class="quote">
+            <p>ABC</p>
+        </blockquote>
+        
     </section>
 
     <!-- FOOTER -->
