--- a/equipements.html
+++ b/equipements.html
@@ -49,7 +49,7 @@
         
         <!-- QUOTE -->
         <blockquote class="quote">
-            <p>ABC</p>
+            <p>« Il n'y a pas de mauvais temps, il n'y a que de mauvais vêtements. »</p>
         </blockquote>
         
     </section>
