--- a/equipements.html
+++ b/equipements.html
@@ -50,7 +50,7 @@
         <!-- QUOTE -->
         <blockquote class="quote">
             <p>« Il n'y a pas de mauvais temps, il n'y a que de mauvais vêtements. »</p>
-            <footer>Michael Jordan</footer>
+            <footer>Dicton Allemand</footer>
         </blockquote>
         
     </section>
