--- a/equipements.html
+++ b/equipements.html
@@ -55,6 +55,42 @@
         
     </section>
 
+        <!-- BOX 2 : Un équipement pour chaque sport -->
+    <section class="sports-equipements">
+        <h2>Un équipement pour chaque sport</h2>
+
+        <div class="sports-grid">
+            <article class="sport-block">
+                <h3>Tennis</h3>
+                <p>
+                    Commencez par une raquette adaptée à votre niveau, ainsi que des chaussures offrant un bon maintien
+                    et une semelle conçue pour la surface sur laquelle vous jouez. Complétez avec des vêtements
+                    techniques respirants, des chaussettes renforcées et une veste ou un tee-shirt ultra-respirant.
+                    Ajoutez grips, gourde, balles de qualité et vous serez prêt.
+                </p>
+            </article>
+
+            <article class="sport-block">
+                <h3>Running</h3>
+                <p>
+                    Commencez par des chaussures adaptées à votre foulée et suffisamment amorties. Complétez avec des
+                    chaussettes anti-frottements et une veste coupe-vent. Ajoutez une ceinture d’hydratation, une lampe
+                    ou des éléments réfléchissants, et éventuellement une montre connectée. Vous êtes prêt pour votre
+                    meilleur sprint&nbsp;!
+                </p>
+            </article>
+
+            <article class="sport-block">
+                <h3>Basket</h3>
+                <p>
+                    Misez avant tout sur des chaussures solides et stables, offrant un bon maintien de la cheville et
+                    une semelle résistante adaptée aux terrains extérieurs. Ajoutez un ballon bien gonflé et des
+                    chaussettes renforcées pour absorber les impacts. À vos marques, prêt, tirez&nbsp;!
+                </p>
+            </article>
+        </div>
+    </section>
+
     <!-- FOOTER -->
     <div id="footer"></div>
 
