--- a/equipements.html
+++ b/equipements.html
@@ -55,7 +55,7 @@
         
     </section>
 
-        <!-- BOX 2 : Un équipement pour chaque sport -->
+        <!-- BOX 2 -->
     <section class="sports-equipements">
         <h2>Un équipement pour chaque sport</h2>
 
