--- a/equipements.html
+++ b/equipements.html
@@ -61,7 +61,7 @@
 
         <div class="sports-grid">
             <article class="sport-block">
-                <h3>Tennis</h3>
+                <h3>🎾 Tennis</h3>
                 <p>
                     Commencez par une raquette adaptée à votre niveau, ainsi que des chaussures offrant un bon maintien
                     et une semelle conçue pour la surface sur laquelle vous jouez. Complétez avec des vêtements
@@ -71,7 +71,7 @@
             </article>
 
             <article class="sport-block">
-                <h3>Running</h3>
+                <h3>🏃‍♂️‍➡️ Running</h3>
                 <p>
                     Commencez par des chaussures adaptées à votre foulée et suffisamment amorties. Complétez avec des
                     chaussettes anti-frottements et une veste coupe-vent. Ajoutez une ceinture d’hydratation, une lampe
@@ -81,7 +81,7 @@
             </article>
 
             <article class="sport-block">
-                <h3>Basket</h3>
+                <h3>🏀 Basket</h3>
                 <p>
                     Misez avant tout sur des chaussures solides et stables, offrant un bon maintien de la cheville et
                     une semelle résistante adaptée aux terrains extérieurs. Ajoutez un ballon bien gonflé et des
