--- a/equipements.html
+++ b/equipements.html
@@ -46,13 +46,12 @@
 
     <!-- CONTENU -->
     <section class="equipements">
-        
-        <!-- QUOTE -->
-        <blockquote class="quote">
-            <p>« Il n'y a pas de mauvais temps, il n'y a que de mauvais vêtements. »</p>
-            <footer>Dicton Allemand</footer>
-        </blockquote>
-        
+        <div class="content">
+            <blockquote class="quote">
+                <p>« Il n'y a pas de mauvais temps, il n'y a que de mauvais vêtements. »</p>
+                <footer>Dicton Allemand</footer>
+            </blockquote>
+        </div>
     </section>
 
         <!-- BOX 2 -->
