--- a/selection-ete.html
+++ b/selection-ete.html
@@ -46,33 +46,43 @@
         </p>
     </section>
 
-    <!-- CONTENU -->
+        <!-- CONTENU -->
     <section class="selection-ete">
-        <h2>Équipements pour l’été</h2>
 
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus.
-            Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.
+             Texte introduction - Quis enim aut eum diligat quem metuat, aut eum a quo se metui putet? Coluntur tamen simulatione dumtaxat ad tempus. 
         </p>
 
-        <p>
-            Cras elementum ultrices diam. Maecenas ligula massa, varius a,
-            semper congue, euismod non, mi.
-        </p>
+    </section>
 
-        <p>
-            Proin porttitor, orci nec nonummy molestie, enim est eleifend mi,
-            non fermentum diam nisl sit amet erat.
-        </p>
+    <!-- COUPS DE COEUR TEMPS FROIDS -->
+    <section class="selection-froid">
+        <h2>Nos coups de coeurs pour les temps froids</h2>
 
-        <p>
-            Duis semper. Duis arcu massa, scelerisque vitae, consequat in,
-            pretium a, enim.
-        </p>
+        <div class="selection-froid-grid">
 
-        <p>
-            Pellentesque congue. Ut in risus volutpat libero pharetra tempor.
-        </p>
+            <a class="selection-froid-item"
+               href="https://example.com/produit1"
+               target="_blank" rel="noopener">
+                <img src="image/froid-1.jpg"
+                     alt="Veste chaude pour temps froids">
+            </a>
+
+            <a class="selection-froid-item"
+               href="https://example.com/produit2"
+               target="_blank" rel="noopener">
+                <img src="image/froid-2.jpg"
+                     alt="Sweat ou veste de sport pour temps froids">
+            </a>
+
+            <a class="selection-froid-item"
+               href="https://example.com/produit3"
+               target="_blank" rel="noopener">
+                <img src="image/froid-3.jpg"
+                     alt="Accessoire chaud pour temps froids">
+            </a>
+
+        </div>
     </section>
 
     <!-- FOOTER -->
