--- a/selection-ete.html
+++ b/selection-ete.html
@@ -64,21 +64,21 @@
             <a class="selection-froid-item"
                href="https://example.com/produit1"
                target="_blank" rel="noopener">
-                <img src="image/froid-1.jpg"
+                <img src="image/paris.jpg"
                      alt="Veste chaude pour temps froids">
             </a>
 
             <a class="selection-froid-item"
                href="https://example.com/produit2"
                target="_blank" rel="noopener">
-                <img src="image/froid-2.jpg"
+                <img src="image/paris2.jpg"
                      alt="Sweat ou veste de sport pour temps froids">
             </a>
 
             <a class="selection-froid-item"
                href="https://example.com/produit3"
                target="_blank" rel="noopener">
-                <img src="image/froid-3.jpg"
+                <img src="image/paris3.jpg"
                      alt="Accessoire chaud pour temps froids">
             </a>
 
