--- a/selection-ete.html
+++ b/selection-ete.html
@@ -62,21 +62,21 @@
         <div class="selection-froid-grid">
 
             <a class="selection-froid-item"
-               href="https://example.com/produit1"
+               href="https://www.toureiffel.paris/fr"
                target="_blank" rel="noopener">
                 <img src="image/paris.jpg"
                      alt="Veste chaude pour temps froids">
             </a>
 
             <a class="selection-froid-item"
-               href="https://example.com/produit2"
+               href="https://www.louvre.fr/"
                target="_blank" rel="noopener">
                 <img src="image/paris2.jpg"
                      alt="Sweat ou veste de sport pour temps froids">
             </a>
 
             <a class="selection-froid-item"
-               href="https://example.com/produit3"
+               href="https://www.notredamedeparis.fr/"
                target="_blank" rel="noopener">
                 <img src="image/paris3.jpg"
                      alt="Accessoire chaud pour temps froids">
