--- a/selection-hiver.html
+++ b/selection-hiver.html
@@ -46,7 +46,7 @@
         </p>
     </section>
 
-    <!-- CONTENU -->
+    <!-- CONTENU PRINCIPAL -->
     <section class="selection-hiver">
         <h2>Équipements pour l’hiver</h2>
 
@@ -73,6 +73,39 @@
         <p>
             Ut in risus volutpat libero pharetra tempor.
         </p>
+    </section>
+
+    <!-- NOS COUPS DE COEURS – TEMPS FROIDS -->
+    <section class="cold-favorites">
+        <h2>Nos coups de coeurs pour les temps froids</h2>
+
+        <div class="favorites-grid">
+
+            <!-- PIC 1 -->
+            <a href="https://www.elysee.fr/"
+               class="favorite-item"
+               target="_blank"
+               rel="noopener">
+                <img src="image/merkel-macron.jpg" alt="Veste chaude pour courir en hiver">
+            </a>
+
+            <!-- PIC 2 -->
+            <a href="https://www.buero-bundeskanzlerin-ad.de/"
+               class="favorite-item"
+               target="_blank"
+               rel="noopener">
+                <img src="image/merkel-macron2.jpg" alt="Tenue de sport hivernale confortable">
+            </a>
+
+            <!-- PIC 3 -->
+            <a href="https://www.bundestag.de/"
+               class="favorite-item"
+               target="_blank"
+               rel="noopener">
+                <img src="image/merkel-macron3.jpg" alt="Bandeau chaud pour la tête">
+            </a>
+
+        </div>
     </section>
 
     <!-- FOOTER -->
