--- a/selection-hiver.html
+++ b/selection-hiver.html
@@ -86,7 +86,7 @@
                class="favorite-item"
                target="_blank"
                rel="noopener">
-                <img src="image/merkel-macron.jpg" alt="Veste chaude pour courir en hiver">
+                <img src="image/merkel-macron.jpg" alt="PIC-DESCRIPTION!!!">
             </a>
 
             <!-- PIC 2 -->
@@ -94,7 +94,7 @@
                class="favorite-item"
                target="_blank"
                rel="noopener">
-                <img src="image/merkel-macron2.jpg" alt="Tenue de sport hivernale confortable">
+                <img src="image/merkel-macron2.jpg" alt="PIC-DESCRIPTION!!!">
             </a>
 
             <!-- PIC 3 -->
@@ -102,7 +102,7 @@
                class="favorite-item"
                target="_blank"
                rel="noopener">
-                <img src="image/merkel-macron3.jpg" alt="Bandeau chaud pour la tête">
+                <img src="image/merkel-macron3.jpg" alt="PIC-DESCRIPTION!!!">
             </a>
 
         </div>
