--- a/selection-ete.html
+++ b/selection-ete.html
@@ -65,21 +65,21 @@
                href="https://www.toureiffel.paris/fr"
                target="_blank" rel="noopener">
                 <img src="image/paris.jpg"
-                     alt="Veste chaude pour temps froids">
+                     alt="PIC-DESCRIPTION!!!">
             </a>
 
             <a class="selection-froid-item"
                href="https://www.louvre.fr/"
                target="_blank" rel="noopener">
                 <img src="image/paris2.jpg"
-                     alt="Sweat ou veste de sport pour temps froids">
+                     alt="PIC-DESCRIPTION!!!">
             </a>
 
             <a class="selection-froid-item"
                href="https://www.notredamedeparis.fr/"
                target="_blank" rel="noopener">
                 <img src="image/paris3.jpg"
-                     alt="Accessoire chaud pour temps froids">
+                     alt="PIC-DESCRIPTION!!!">
             </a>
 
         </div>
