--- a/selection-ete.html
+++ b/selection-ete.html
@@ -57,7 +57,7 @@
 
     <!-- COUPS DE COEUR TEMPS FROIDS -->
     <section class="selection-froid">
-        <h2>Nos coups de coeurs pour les temps froids</h2>
+        <h2>PARISSS 😍😍😍</h2>
 
         <div class="selection-froid-grid">
 
