--- a/selection-ete.html
+++ b/selection-ete.html
@@ -46,7 +46,7 @@
         </p>
     </section>
 
-        <!-- CONTENU -->
+    <!-- CONTENU -->
     <section class="selection-ete">
 
         <p>
@@ -55,7 +55,7 @@
 
     </section>
 
-    <!-- COUPS DE COEUR TEMPS FROIDS -->
+    <!-- 1 -->
     <section class="selection-froid">
         <h2>PARISSS 😍😍😍</h2>
 
@@ -80,6 +80,39 @@
                target="_blank" rel="noopener">
                 <img src="image/paris3.jpg"
                      alt="PIC-DESCRIPTION!!!">
+            </a>
+
+        </div>
+    </section>
+
+    <!-- 2 -->
+    <section class="cold-favorites">
+        <h2>Oh La La 😏</h2>
+
+        <div class="favorites-grid">
+
+            <!-- PIC 1 -->
+            <a href="https://www.elysee.fr/"
+               class="favorite-item"
+               target="_blank"
+               rel="noopener">
+                <img src="image/merkel-macron.jpg" alt="PIC-DESCRIPTION!!!">
+            </a>
+
+            <!-- PIC 2 -->
+            <a href="https://www.buero-bundeskanzlerin-ad.de/"
+               class="favorite-item"
+               target="_blank"
+               rel="noopener">
+                <img src="image/merkel-macron2.jpg" alt="PIC-DESCRIPTION!!!">
+            </a>
+
+            <!-- PIC 3 -->
+            <a href="https://www.bundestag.de/"
+               class="favorite-item"
+               target="_blank"
+               rel="noopener">
+                <img src="image/merkel-macron3.jpg" alt="PIC-DESCRIPTION!!!">
             </a>
 
         </div>
