--- a/navbar.html
+++ b/navbar.html
@@ -19,7 +19,7 @@
             <li class="has-sub">
                 <a href="equipements.html">S'équiper</a>
                 <ul class="submenu">
-                    <li><a href="selection-ete.html">Notre sélection été</a></li>
+                    <li><a href="selection-ete.html">Notre sélection</a></li>
                     <li><a href="astuces.html">Astuces</a></li>
                 </ul>
             </li>
