--- a/notre-selection.html
+++ b/notre-selection.html
@@ -2,7 +2,7 @@
 <html lang="fr-FR">
 <head>
     <meta charset="utf-8">
-    <title>Notre sélection été</title>
+    <title>Notre sélection</title>
 
     <meta name="author" content="Laurence Cusin-Masset et Laiquah Pandore">
     <meta name="description"
@@ -38,7 +38,7 @@
 
     <!-- HERO -->
     <section class="hero">
-        <h1>Notre sélection été</h1>
+        <h1>Notre sélection</h1>
         <p>
             Découvrez notre sélection d’équipements pour profiter pleinement
             de vos activités sportives en plein air durant l’été.
