--- a/sources.html
+++ b/sources.html
@@ -79,7 +79,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <!-- Layout-Loader (Navbar + Footer) -->
+    <!-- LAYOUT SCRIPT -->
     <script src="js/layout.js"></script>
 </body>
 </html>
